<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/admin_layout_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/admin" />

    <EditText
        android:id="@+id/admin_login_activity_name_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/admin_layout_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_box"
        android:gravity="center"
        android:hint="@string/login_activity_name_input"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/admin_login_activity_password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/admin_login_activity_name_input"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/input_box"
        android:gravity="center"
        android:hint="@string/login_activity_password_input"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/admin_login_activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_login_activity_password_input"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login_activity_login"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/admin_login_activity_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_login_activity_login"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_activity_register" />

    <TextView
        android:id="@+id/admin_login_activity_forgetNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_login_activity_login"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login_activity_forgetNum" />

</RelativeLayout>