<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/student_register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_box"
        android:gravity="center"
        android:hint="@string/register_student_id"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/student_register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_box"
        android:gravity="center"
        android:hint="@string/register_personName"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/student_register_first_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_box"
        android:gravity="center"
        android:hint="@string/register_firstPassword"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/student_register_second_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_box"
        android:gravity="center"
        android:hint="@string/register_secondPassword"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

</LinearLayout>